spacing issue fixed

--- a/src/components/sideBar.css
+++ b/src/components/sideBar.css
@@ -7,17 +7,19 @@
   width: 300px;
   z-index: 996;
   transition: all 0.3s;
-  padding: 20px;
+  padding: 15px;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
   box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
   background-color: #fff;
+  
 }
 
 .skill-sync {
   display: flex;
   align-items: center;
+  margin-top: 5px;
   justify-content: space-between;
   margin-bottom: 30px; /* Adjusted to add space between skill-sync and overview */
   text-decoration: none; /* Remove underline */
